<resources>
    <string name="app_name">SafeSpot</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="quote">"Safety Should Never Be a Question"</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="login_failed">Login Failed!</string>
    <string name="check_login_details"><u>Check Login Details</u></string>
    <string name="register_acc">Register a New Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="updates">Updates</string>
    <string name="more">More</string>
    <string name="connected">Connected</string>
    <string name="please_enter_username_and_password"><u>Please Enter Username and Password</u></string>
    <string name="view">View</string>
    <string name="connections_guide">Press the ‘+’ icon at the top of the screen to add connections to your account.</string>
    <string name="updates_guide">Go to \'Connected\' at the bottom left to add a connection and to start receiving location updates.</string>
    <string name="user_email"><u>Please use another email or login</u></string>
    <string name="email_taken">Email is already used!</string>
    <string name="choose_name"><u>Please choose another name</u></string>
    <string name="username_taken">Username is already used</string>
    <string name="check_pass"><u>Please check passwords to see if they match</u></string>
    <string name="password_match">Passwords do not match</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_confirm_password">Confirm password cannot be empty</string>
    <string name="fill_fields"><u>Please fill in all the fields</u></string>
</resources>