<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/safespot_orange"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"
>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners_bottom">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:srcCompat="@drawable/safespot_logo_2" />

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:text="@string/quote"
                android:fontFamily="@font/mplus1pbold"
                android:textColor="@color/black"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Username Field -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pbold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/createAccountText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104" />

            <TextView
                android:id="@+id/createAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pbold"
                android:text="@string/create_a_new_account"
                android:textColor="@color/safespot_grey"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/username_taken"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerText" />

            <TextView
                android:id="@+id/username_taken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pextrabold"
                android:textColor="@color/safespot_red"
                android:textSize="16sp"
                android:visibility="invisible"
                android:text="@string/username_taken"
                app:layout_constraintBottom_toTopOf="@id/choose_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccountText" />

            <TextView
                android:id="@+id/choose_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pextrabold"
                android:layout_marginBottom="10dp"
                android:text="@string/choose_name"
                android:visibility="invisible"
                android:textColor="@color/safespot_red"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_taken" />

            <TextView
                android:id="@+id/email_taken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pextrabold"
                android:textColor="@color/safespot_red"
                android:visibility="invisible"
                android:textSize="16sp"
                android:text="@string/email_taken"
                app:layout_constraintBottom_toTopOf="@id/use_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccountText" />

            <TextView
                android:id="@+id/use_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/mplus1pextrabold"
                android:text="@string/user_email"
                android:visibility="invisible"
                android:textColor="@color/safespot_red"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_taken" />

            <TextView
                android:id="@+id/password_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pextrabold"
                android:textColor="@color/safespot_red"
                android:visibility="invisible"
                android:textSize="16sp"
                android:text="@string/password_match"
                app:layout_constraintBottom_toTopOf="@id/check_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccountText" />

            <TextView
                android:id="@+id/check_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/mplus1pextrabold"
                android:text="@string/check_pass"
                android:textColor="@color/safespot_red"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_match" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/safespot_textinput"
        android:inputType="text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountText"/>

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/safespot_textinput"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/safespot_textinput"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

            <ImageButton
                android:id="@+id/toggle_password_visibility"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_visibility"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/password" />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/safespot_textinput"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"/>

            <ImageButton
                android:id="@+id/toggle_confirm_password_visibility"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_visibility"
                app:layout_constraintBottom_toBottomOf="@id/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/confirm_password" />
    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:fontFamily="@font/mplus1pbold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/safespot_orange"
        android:textColor="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"/>

    <!-- Go to Login Button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@android:color/white"
                android:padding="10dp"
                android:layout_marginBottom="24dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="#80000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
