<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/safespot_orange"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners_bottom">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:srcCompat="@drawable/safespot_logo_2" />

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:text="@string/quote"
                android:fontFamily="@font/mplus1pbold"
                android:textColor="@color/black"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mplus1pbold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/signintext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

            <TextView
                android:id="@+id/signintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/mplus1pbold"
                android:text="@string/sign_in_to_your_account"
                android:textColor="@color/safespot_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/loginFailed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginText" />

            <TextView
                android:id="@+id/loginFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus1pextrabold"
                android:textColor="@color/safespot_red"
                android:textSize="13sp"
                android:visibility="invisible"
                android:text="@string/login_failed"
                app:layout_constraintBottom_toTopOf="@id/checkdetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signintext" />

            <TextView
                android:id="@+id/checkdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/mplus1pextrabold"
                android:text="@string/check_login_details"
                android:textColor="@color/safespot_red"
                android:visibility="invisible"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginFailed" />

            <TextView
                android:id="@+id/enterfields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/mplus1pextrabold"
                android:text="@string/please_enter_username_and_password"
                android:textColor="@color/safespot_red"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginFailed" />


    <!-- Username Field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:background="@drawable/safespot_textinput"
        android:inputType="text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkdetails"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/safespot_grey"
        android:textColor="@color/black"
        android:background="@drawable/safespot_textinput"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

            <ImageButton
                android:id="@+id/toggle_password_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_visibility"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/password" />

            <!-- Login Button -->
            <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:text="@string/login"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:fontFamily="@font/mplus1pbold"
        android:backgroundTint="@color/safespot_orange"
        android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"/>

            <!-- Forgot Password Link -->
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot my password?"
                android:textColor="#80000000"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"/>

            <!-- Register New Account Button -->
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/register_acc"
                android:layout_marginTop="80dp"
                android:textSize="18sp"
                android:fontFamily="@font/mplus1pbold"
                android:backgroundTint="@color/safespot_orange"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
